Adedd multiple address, email, phone number

--- a/testproject/contacts/templates/contacts/about.html
+++ b/testproject/contacts/templates/contacts/about.html
@@ -6,7 +6,9 @@
   <div class="col-xs-6 col-md-4">
   </div>
   <div class="col-xs-6 col-md-4">
-    <h2 class="bg-primary"> Eduardo Enriquez </h2>
+    <h2> Eduardo Enriquez </h2>
+    <p>eduardo.a.enriquez at gmail dot com</p>
+    <a href="https://github.com/eduzen">https://github.com/eduzen</a>
 
   </div>
   <div class="col-xs-6 col-md-4">
