--- a/testproject/contacts/templates/contacts/base.html
+++ b/testproject/contacts/templates/contacts/base.html
@@ -50,7 +50,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/companies">Companies</a></li>
             <li><a href="/contacts">Contacts</a></li>
+            <li><a href="/admin">Admin</a></li>
             <li><a href="/about">About</a></li>
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
